--- a/src/main/webapp/WEB-INF/taglib/dashboard/dashboard.xhtml
+++ b/src/main/webapp/WEB-INF/taglib/dashboard/dashboard.xhtml
@@ -2,7 +2,7 @@
 	xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core" xmlns:p="http://primefaces.org/ui"
 	xmlns:c="http://java.sun.com/jsp/jstl/core">
 	<!-- Display dashboard -->
-	<h:form id="form">
+	<h:form id="#{id}">
 		<p:growl id="messages" showDetail="true" sticky="false" life="2000" />
 		<p:dashboard id="board" model="#{dashboardBean.model}">
 
