--- a/src/main/webapp/WEB-INF/taglib/menu/menu.xhtml
+++ b/src/main/webapp/WEB-INF/taglib/menu/menu.xhtml
@@ -8,7 +8,7 @@
 	<div id="site-menu">
 		<h:form id="menu-form" rendered="true">
 			<p:menubar id="#{id}"
-				rendered="#{request.isUserInRole('ROLE_GUESTUSER')}">
+				rendered="#{request.isUserInRole('ROLE_REGISTEREDUSER')}">
 				<p:menuitem value="Home" url="#{request.servletPath}/main"
 					icon="ui-icon-home" />
 				<p:submenu label="My Scuba Diving">
@@ -17,7 +17,7 @@
 					<p:menuitem value="Kitbag" url="#{request.servletPath}/kitbag" />
 				</p:submenu>
 
-				<p:submenu id="admin" label="Admin" rendered="request.isUserInRole('ROLE_ADMIN')" >
+				<p:submenu id="admin" label="Admin" rendered="#{request.isUserInRole('ROLE_ADMIN')}" >
 					<p:menuitem id="administerLogbooks" value="Logbooks"
 						url="#{request.servletPath}/admin/logbook" disabled="#{not request.isUserInRole('ROLE_LOGBOOKADMIN')}"/>
 					<p:menuitem value="Details"
